# folwup

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
folwup_cli/: Cargo.toml
folwup_core/: Cargo.toml
folwup_core/src/: feed.rs  lib.rs
folwup_core/src/feed/: atom.rs  rss.rs
folwup_sqlite/: Cargo.toml
