[package]
authors = ["Bryant Luk <code@bryantluk.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "folwup_core"
publish = false
readme = "README.md"
repository = "https://github.com/bluk/readfeed"
version = "0.1.0"

[features]
default = ["std"]

std = ["chrono/std", "readfeed/std"]

alloc = ["chrono/alloc", "readfeed/alloc"]

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["clock", "wasmbind"] }
readfeed = { version ="0.2.0", default-features = false }
